--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@testing-library/user-event": "^13.2.1",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^6.2.0",
+		"dotenv-webpack": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.24.0",
 		"favicons-webpack-plugin": "^5.0.2",
@@ -50,6 +51,8 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"dotenv": "^10.0.0",
+		"firebase": "^8.9.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0"
