--- a/src/.env
+++ b/src/.env
@@ -4,4 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID=pursuit-of-trivia-dev
 REACT_APP_FIREBASE_STORAGE_BUCKET=pursuit-of-trivia-dev.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=942910229698
 REACT_APP_FIREBASE_APP_ID=1:942910229698:web:ad26f12a1999195051ff5b
-REACT_APP_BASE_URL=https://pursuit-of-trivia-api-dev.herokuapp.com/
+REACT_APP_BASE_URL=https://pursuit-of-trivia-api-dev.herokuapp.com
