--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.24.0",
+		"favicons": "^6.2.2",
 		"favicons-webpack-plugin": "^5.0.2",
 		"html-webpack-plugin": "^5.3.2",
 		"jest": "^27.0.6",
