--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
+		"file-loader": "^6.2.0",
 		"firebase": "^8.9.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
