--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
+		"chart.js": "^3.5.1",
 		"dotenv": "^10.0.0",
 		"firebase": "^8.9.1",
 		"react": "^17.0.2",
