--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyBXM6KOXB1j_FBOTGZTmDKT2z8Pv_Dxk4I
-REACT_APP_FIREBASE_AUTH_DOMAIN=pursuit-of-trivia-dev.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=pursuit-of-trivia-dev
-REACT_APP_FIREBASE_STORAGE_BUCKET=pursuit-of-trivia-dev.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=942910229698
-REACT_APP_FIREBASE_APP_ID=1:942910229698:web:ad26f12a1999195051ff5b
-REACT_APP_BASE_URL=https://pursuit-of-trivia-api-dev.herokuapp.com
+REACT_APP_FIREBASE_API_KEY=AIzaSyCOdJU-FbnFnMoCAkm3-bPe_Xn1xaDlz2o
+REACT_APP_FIREBASE_AUTH_DOMAIN=pursuit-of-trivia-prod.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=pursuit-of-trivia-prod
+REACT_APP_FIREBASE_STORAGE_BUCKET=pursuit-of-trivia-prod.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1010158034185
+REACT_APP_FIREBASE_APP_ID=1:1010158034185:web:57aa4eabee5dcf768e07d8
+REACT_APP_BASE_URL=https://pursuit-of-trivia-api.herokuapp.com
